--- a/page2.html
+++ b/page2.html
@@ -111,7 +111,7 @@
 			</div>
 			<div class="col-sm-6">
 				<p>
-					contact@agencelapanthere.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
+					contact@agencelapanthere.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi
 				</p>
 			</div>
 		</div>
@@ -166,3 +166,19 @@
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
